Fixing more compiler errors (still avoiding item data components)